Bevel weight is missing after Subsurf modifier #51057

Closed
opened 2017-03-27 14:25:18 +02:00 by Serge Lyatin · 15 comments

System Information
Win7 32 bit

Blender Version
Broken: 2.78

Short description of error
Bevel modifier can't read weight info, if it has been placed after Subsurf modifier. I found some reports here from the 2008 (#17329) where it says it was fixed, but it doesn't work neither in 2.76, no in 2.77 and also in 2.78

Bevel_weight.blend

**System Information** Win7 32 bit **Blender Version** Broken: 2.78 **Short description of error** Bevel modifier can't read weight info, if it has been placed after Subsurf modifier. I found some reports here from the 2008 (#17329) where it says it was fixed, but it doesn't work neither in 2.76, no in 2.77 and also in 2.78 [Bevel_weight.blend](https://archive.blender.org/developer/F525056/Bevel_weight.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

#58789 was marked as duplicate of this issue

#58789 was marked as duplicate of this issue

#58440 was marked as duplicate of this issue

#58440 was marked as duplicate of this issue

#58411 was marked as duplicate of this issue

#58411 was marked as duplicate of this issue

#58172 was marked as duplicate of this issue

#58172 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I believe problem is what bweight(as well as crease) is not a CustomData for DerivedMesh.
Thus, CustomData_copy in the DM_from_template_ex function does not transfer the bweightinformation to the new DM.

*The creaseinformation is passed in ss_sync_ccg_from_derivedmesh

I believe problem is what **bweight**(as well as **crease**) is not a CustomData for DerivedMesh. Thus, `CustomData_copy` in the `DM_from_template_ex` function does not transfer the **bweight**information to the new DM. *The **crease**information is passed in `ss_sync_ccg_from_derivedmesh`
Member

Added subscriber: @ArnoldKonrad

Added subscriber: @ArnoldKonrad
Member
Added subscribers: @MassimilianoPuliero, @JDMulti, @jamiehs, @Graehu, @JacquesLucke
Member

Added subscriber: @niewinny

Added subscriber: @niewinny
Member

Added subscriber: @howardt

Added subscriber: @howardt
Howard Trickey self-assigned this 2018-12-05 14:41:50 +01:00
Member

This is similar to, probably the same as, the issue discussed in #47129.
Looks like the template has to change to create & copy the CD_BWEIGHT custom data layer. I will look into this.

This is similar to, probably the same as, the issue discussed in #47129. Looks like the template has to change to create & copy the CD_BWEIGHT custom data layer. I will look into this.

This issue was referenced by aff9ccbade

This issue was referenced by aff9ccbade9ae74fb63becc842621eefef5abfa0
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51057
No description provided.